--- a/Resources/translations/messages.zh_CN.yml
+++ b/Resources/translations/messages.zh_CN.yml
@@ -2,13 +2,14 @@
 # (c) Paweł Jędrzejewski
 
 sylius:
-  form:
-    role:
-      code: 代码
-      name: 名称
-      description: 描述
-      parent: 上一级
-    permission:
-      code: 代码
-      description: 描述
-      parent: 上一级
+    form:
+        role:
+            code: 代码
+            name: 名称
+            description: 描述
+            permissions: 权限
+            parent: 上一级
+        permission:
+            code: 代码
+            description: 描述
+            parent: 上一级
